Doc/0.2/16-internals/01_architecture_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.8.21` · мод `0.2.1` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Устройство и расширение | Пред.: [NodeCanvas](../15-nodecanvas/01_nodecanvas_ru.md) | След.: [Свой компонент](02_custom_component_ru.md) | [English](01_architecture_en.md)

---

# Архитектура: как фреймворк устроен внутри

Эта страница объясняет модель, на которой построено всё остальное. Читать её не обязательно,
чтобы собрать окно из готовых компонентов, но обязательно, если вы пишете свой компонент,
ловите странное поведение или упёрлись в производительность.

## Immediate mode: кадр считается заново

Привычный (retained) интерфейс — это долгоживущие объекты: вы создали кнопку, положили её в
панель, и она там лежит. Изменили данные — надо не забыть позвать `button.SetText(...)`,
иначе на экране останется старое.

Здесь иначе. **Каждый кадр интерфейс считается заново, исходя из текущих данных.** Значения не
копируются в элементы: компоненты читают их через делегаты (`Func<T>`) в момент отрисовки.
Рассинхрона «данные изменились, а на экране старое» не бывает в принципе: на экране всегда то,
что лежит в ваших данных прямо сейчас.

> **Дерево элементов при этом обычно живёт.** Штатный путь — собрать его один раз (`UiWindow.Root`
> задаётся при создании окна) и дальше не трогать: перестраивать объекты не нужно, потому что
> данные и так читаются заново каждый кадр. Пересоздавать дерево можно, но тогда состояние
> виджетов нужно привязать к явным ключам — см. «Ключ и состояние» ниже.

Отсюда главное следствие: **синхронизировать интерфейс с данными не нужно, потому что нечему
рассинхронизироваться.** Никаких подписок на изменения, никаких «обнови меня».

## Три фазы кадра

Каждый элемент проходит три фазы, всегда в этом порядке:

```
Measure  →  Arrange  →  Emit
```

**`Measure(available, ctx)` — «сколько тебе нужно места?»**
Элемент считает свой желаемый размер (`Desired`) и, если у него есть дети, спрашивает их о том
же. Идёт снизу вверх: чтобы узнать размер панели, надо сначала узнать размеры её содержимого.
`available` — сколько места предлагают; элемент вправе попросить меньше или больше.

**`Arrange(finalRect, ctx)` — «вот твоё место, разложи детей»**
Родитель уже решил, какой прямоугольник кому достался. Элемент запоминает его в `Bounds` и
раздаёт места детям. Идёт сверху вниз: место можно делить, только зная, сколько его всего.

**`Emit(list, ctx)` — «нарисуйся»**
Элемент добавляет в `DrawList` команды отрисовки (фон, бордюр, текст, картинка) и здесь же
обрабатывает ввод — клики и наведение. Ввод живёт именно тут не случайно: только на этой фазе
известны окончательные `Bounds`, а значит, и попал ли курсор в элемент.

Почему два прохода вместо одного? Потому что размер зависит от содержимого, а положение — от
размера. Один проход не смог бы отцентрировать элемент, ещё не зная его ширины.

## Где живёт состояние: ID-store

Позиция скролла, текст в поле ввода, раскрытые ветви дерева — это внутренняя механика виджета.
Она живёт не в полях элемента, а в **ID-store** (`UiState`) — хранилище «по стабильному ключу»:

```csharp
public sealed class MyState : WidgetState
{
    public float Scroll;
}

MyState st = ctx.State.GetOrCreate(ctx.State.MakeId(StateKey) + "/my", () => new MyState());
```

Так состояние переживает не только кадр, но и пересоздание элемента — если ключ остался прежним.

## Ключ и состояние

`StateKey` (свойство `UiElement`) — это **явный `Key`, если он задан, иначе автоматический ключ,
привязанный к самому объекту элемента**. Отсюда простое правило:

| Ситуация | Нужен ли `Key` |
|---|---|
| Дерево собрано один раз и живёт (штатный путь) | Нет, автоключа достаточно |
| Элементы пересоздаются каждый кадр | **Да** — иначе каждый новый объект получает чистое состояние |
| Состояние должно пережить пересоздание окна или списка | **Да** |
| Нужен предсказуемый id (отладка, программное управление) | Да |

Если `Key` задан, он обязан быть **стабильным между кадрами**: ключ, зависящий от времени,
случайного числа или порядка сортировки, каждый кадр создаёт «новый» виджет с чистым состоянием —
скролл прыгает в начало, поле ввода теряет курсор, hover не срабатывает.

Ключ также обязан быть **уникальным среди соседей**: два списка с `Key = "list"` в одном окне
разделят одно состояние на двоих и будут прокручиваться синхронно.

> **Пишете свой компонент — обращайтесь к состоянию только через `StateKey`, не через `Key`.**
> `UiState.MakeId(null)` выдаёт номер по счётчику вызовов, а компонент трогает своё состояние
> дважды за кадр (в `Measure` и в `Emit`) — с `Key = null` он прочитал бы состояние под одним
> номером, а записал под другим. `StateKey` от этого защищает.

**Важно: данные мода в ID-store не хранятся.** Там лежит только внутренняя механика виджета.
Список колонистов, выбранный предмет, текст, который вы редактируете, — это ваши данные, они
живут у вас. Фреймворк их не копирует и не кэширует, поэтому «реактивность» достаётся бесплатно:
вы изменили свой список — следующий кадр нарисует новый.

## Ядро и адаптер

Код разделён швом на две части:

| Слой | Папки | Зависимости |
|------|-------|-------------|
| Ядро | `Core`, `Layout`, `Styling`, `Rendering`, `Elements`, `Components`, `Animation` | чистый C#, без Unity |
| Адаптер | `Adapter` | `UnityEngine` + `Verse` |

Ядро **ничего не знает про игру**: оно не рисует, а описывает, что нужно нарисовать, — складывает
в `DrawList` команды вида «прямоугольник с таким стилем», «текст в такой рамке». Адаптер эти
команды исполняет через `Widgets`/`GUI` и заодно поставляет ядру платформенные мелочи: измерение
текста (`ITextMeasurer`), размеры спрайтов (`ISpriteMetrics`), время, ввод.

Практический вывод для вас: **компонент пишется в ядре и Unity не трогает**. Если в компоненте
понадобился `UnityEngine`, почти наверняка что-то делается не на своём слое.

## Стили и темы

У каждого элемента есть собственный `Style` — то, что задали вы. Но большинство полей вы не
задаёте, и тогда они берутся из **слота темы** — именованного набора значений по умолчанию
(`"button"`, `"input/frame"`, `"orgchart/node"`). Слияние своего стиля со слотом даёт
**резолвнутый стиль**, доступный внутри компонента как `RS`.

Правило простое: **заданное вами всегда побеждает тему**, а незаданное берётся из темы. Поэтому
смена темы перекрашивает интерфейс целиком, но не затирает то, что вы указали явно.

## Что из этого следует для производительности

Кадр считается около 60 раз в секунду, и всё, что выполняется внутри кадра, выполняется 60 раз в
секунду: делегаты значений, обработчики, ваш код построения содержимого — если вы его там держите.

**Так делать не надо:**

```csharp
// ПЛОХО: список строится заново каждый кадр
var items = new List<string>();
foreach (Pawn p in map.mapPawns.FreeColonists)
    items.Add(p.LabelShort);
listBox.Items = items;
```

Это 60 новых списков в секунду и 60 обходов колонии — работа ради результата, который почти
всегда тот же самый.

**Так надо:**

```csharp
// ХОРОШО: список живёт у вас, перестраивается когда РЕАЛЬНО изменился
if (_colonistsDirty)
{
    _items.Clear();
    foreach (Pawn p in map.mapPawns.FreeColonists) _items.Add(p.LabelShort);
    _colonistsDirty = false;
}
```

**Для живых значений — делегат, а не копия.** Компоненты принимают `Func<T>`: значение читается
в момент отрисовки, само, и всегда актуальное.

```csharp
// ХОРОШО: прогресс читается из ваших данных каждый кадр, копию обновлять не нужно
new ProgressBar(() => job.Progress);

// ХОРОШО: поле ввода показывает ваше значение и сообщает об изменениях
new InputText { Value = () => settings.Name, OnChange = v => settings.Name = v };
```

**Тяжёлое — не в кадр.** Поиск по всем вещам карты, чтение файла, разбор XML в коде построения
интерфейса — это тот же поиск 60 раз в секунду. Считайте заранее, кэшируйте, инвалидируйте по
событию.

**Отдельно про `Events.Hover`.** Он стреляет каждый кадр, пока курсор над элементом, — в отличие
от `HoverEnter`/`HoverLeave`, которые срабатывают по разу на переход. Тяжёлый обработчик в
`Hover` просаживает FPS; если нужна работа «при наведении», делайте её в `HoverEnter`.

## Чего в модели нет

Полезно знать заранее, чтобы не искать:

- **Нет «перерисовать элемент X».** Перерисовывается весь кадр целиком, всегда.
- **Нет обратных ссылок «ребёнок → родитель».** Дерево обходится сверху вниз.
- **Нет событий изменения данных.** Данные читаются заново каждый кадр — уведомлять не о чем.
- **Нет позиций до `Arrange`.** До второй фазы `Bounds` бессмысленны: спрашивать координаты в
  `Measure` бесполезно, их ещё не существует.

## Куда дальше

Практика — на следующей странице: «Свой компонент» разбирает готовый рабочий компонент по
строчкам, с обработкой ввода, темой, состоянием и событиями.


---

[Оглавление](../index_ru.md) - Устройство и расширение | Пред.: [NodeCanvas](../15-nodecanvas/01_nodecanvas_ru.md) | След.: [Свой компонент](02_custom_component_ru.md) | [English](01_architecture_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
